x/programs/rust/sdk-macros/tests/ui/fail/first-param.rs
// Copyright (C) 2024, Ava Labs, Inc. All rights reserved.
// See the file LICENSE for licensing terms.

use sdk_macros::public;

#[public]
pub fn test(a: u32) {}

fn main() {}
